// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Author API routes GET /api/authors/:id when passed id corresponds to an existing author body matches snapshot 1`] = `
Object {
  "data": Object {
    "attributes": Object {
      "birthDate": "1993-03-22",
      "firstName": "John",
      "imageUrl": null,
      "lastName": "Doe",
    },
    "id": "1",
    "type": "authors",
  },
}
`;

exports[`Author API routes POST /api/authors author data is valid response body matches snapshot 1`] = `
Object {
  "data": Object {
    "attributes": Object {
      "birthDate": "1993-03-22",
      "firstName": "John",
      "imageUrl": null,
      "lastName": "Doe",
    },
    "id": "2",
    "type": "authors",
  },
}
`;
